refactor: rm njit decorators

--- a/notebooks/01-yf-generic_collaborator.ipynb
+++ b/notebooks/01-yf-generic_collaborator.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ot\n",
     "import scipy\n",
     "\n",
     "import numpy as np\n",
-    "\n",
+    "import sklearn as sk\n",
     "\n",
     "from numba import njit\n",
     "from copy import deepcopy\n",
@@ -31,8 +32,7 @@
     "    \"\"\"\n",
     "    \n",
     "    \n",
-    "    @njit\n",
-    "    def __init__(self, data_Id:np.array, X:np.array, Y=None, K=3, use_criterion=False, *args, **kwargs):\n",
+    "    def __init__(self, data_Id:np.array, X:np.array, Y=None, K=3, use_criterion=None, *args, **kwargs):\n",
     "        \"\"\"\n",
     "        Parameters:\n",
     "        data_Id: np.array(int)\n",
@@ -71,8 +71,8 @@
     "            List of all partition matrices.\n",
     "        self.H: np.array\n",
     "            N-dimensional array. Entropy of the classification of each individual.\n",
-    "        self.use_criterion: bool\n",
-    "            Whether to use criterion to accept collaboration or not. Default to False.\n",
+    "        self.use_criterion: str\n",
+    "            If not None, one of 'db', 'purity', 'silhouette'\n",
     "        self.criterion: float\n",
     "            Current value of the criterion used to decide whether to accept collaboration.\n",
     "            Computed with self.get_criterion()\n",
@@ -88,11 +88,11 @@
     "        self.history_R = []\n",
     "        self.H = np.zeros(N)\n",
     "        self.use_criterion, self.criterion = use_criterion, None\n",
-    "        self.db, self.purity, self.silhouette = None, None, None\n",
+    "        self.validation_indices_history = []\n",
+    "        self.confidence_coefficients_history = []\n",
     "        \n",
     "            \n",
     "    \n",
-    "    @njit\n",
     "    def parseX(self, X, *args, **kwargs):\n",
     "        \"\"\"\n",
     "        parse the dataset\n",
@@ -120,7 +120,24 @@
     "        \"\"\"\n",
     "        Fit the parameters to the dataset.\n",
     "        Add first partition matrix to history.\n",
-    "        Also initialize the validation indices, and in particular the criterion.\n",
+    "        Also initialize the validation indices, and in particular the criterion \n",
+    "        (self.criterion = self.validation_indices_history[-1][self.use_criterion])\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "    \n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def refit(self, R):\n",
+    "        \"\"\"\n",
+    "        Fit the parameters of the model starting from matrix R.\n",
+    "        \n",
+    "        Parameters:\n",
+    "            R: np.ndarray\n",
+    "                N*K array, responsibility matrix.\n",
+    "                \n",
+    "        Returns:\n",
+    "            A list, the first elements are the fitted parameters of the model.\n",
+    "            The last element is a dictionary with the validation criteria (at leats db index and silhouette).\n",
     "        \"\"\"\n",
     "        pass\n",
     "    \n",
@@ -145,6 +162,13 @@
     "            \"silhouette\":self.silhouette\n",
     "        }\n",
     "        \n",
+    "        return res\n",
+    "    \n",
+    "        \"\"\"\n",
+    "        or simply:\n",
+    "        return self.validation_indices_history[0]\n",
+    "        \"\"\"\n",
+    "        \n",
     "        \"\"\"\n",
     "        TODO:\n",
     "        add Normalized Mutual Information.\n",
@@ -153,7 +177,7 @@
     "        return res\n",
     "    \n",
     "    \n",
-    "    @njit\n",
+    "    @abstractmethod\n",
     "    def collaborate(self, remote_Ids, remote_Rs): # horizontal collab for now\n",
     "        \"\"\"\n",
     "        Compute a new collaboration matrix, given all remote matrices.\n",
@@ -199,13 +223,96 @@
     "        res /= res.sum(axis=1, keepdims=True)\n",
     "        \n",
     "        # decide whether to accept collaboration\n",
+    "        update = True\n",
+    "        params_and_indices = self.refit(deepcopy(res))\n",
+    "        params, indices = params_and_indices[:-1], params_and_indices[-1]\n",
     "        if self.use_criterion:\n",
-    "            self.refit(res)\n",
+    "            update = True if compare_criterion(indices) else False\n",
     "            \n",
+    "        if update:\n",
+    "            successful_collab = True\n",
+    "            self.save_new_values(res, params, indices)\n",
+    "        else:\n",
+    "            successful_collab = False\n",
+    "            confidence_coefficients = np.zeros(P)\n",
+    "            self.save_old_values()\n",
+    "            \n",
+    "        self.confidence_coefficients_history.append(confidence_coefficients)\n",
+    "        return successful_collab\n",
+    "    \n",
+    "        \n",
+    "    def save_new_values(self, R, params, indices):\n",
+    "        \"\"\"\n",
+    "        save the new values in history\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        self.R = R\n",
+    "        self.history_R.append(deepcopy(R))\n",
+    "        self.params = params\n",
+    "        self.indices = indices\n",
     "        \n",
     "            \n",
+    "    def save_old_values(self, R, params, indices):\n",
+    "        \"\"\"\n",
+    "        no collaboration: save the old values\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        self.history_R.append(self.history_R[-1])\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    def optimal_transport(self, local_R=None, remote_R):\n",
+    "        \"\"\"\n",
+    "        compute the optimal transport plan between the remote partition matrix remote_R and the\n",
+    "        local one.\n",
+    "        Returns the transported remote partition in the local space.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if local_R is None:\n",
+    "            local_R = self.R\n",
     "            \n",
-    "    @njit\n",
+    "        # compute the mass distribution (weight of each cluster)\n",
+    "        local_w = self.local_R.sum(axis=0)/local_R.sum()\n",
+    "        remote_w = remote_R.sum(axis=0)/remote_R.sum()\n",
+    "        \n",
+    "        # compute the cost matrix\n",
+    "        M = sk.metrics.pairwise_distances(local_R, remote_R)\n",
+    "        \n",
+    "        # compute the optimal transport plan\n",
+    "        gamma = ot.lp.emd(local_w, remote_w, M)\n",
+    "        \n",
+    "        # transport\n",
+    "        res = np.dot(remote_R, gamma.T)/np.dot(remote_R, gamma.T).sum(axis=1, keepdims=True)\n",
+    "        \n",
+    "        return res\n",
+    "    \n",
+    "        \n",
+    "    def compute_entropy(self, R=None):\n",
+    "        \"\"\"\n",
+    "        compute normalized entropy\n",
+    "\n",
+    "        Args:\n",
+    "            tau: ndarray\n",
+    "                the probabilistic partition matrix\n",
+    "\n",
+    "        Returns:\n",
+    "            H: ndarray\n",
+    "                N-dimensional vector: entropy for each data point.\n",
+    "\n",
+    "        \"\"\"\n",
+    "\n",
+    "        K = R.shape[1]\n",
+    "\n",
+    "        # compute pairwise entropies\n",
+    "        pairwise_entropy = -R.dot(np.log2(R, where = R>0).T)\n",
+    "        # normalize, maximum entropy is given by uniform distribution over K\n",
+    "        pairwise_entropy /= np.log2(K)\n",
+    "\n",
+    "        H = pairwise_entropy.diagonal().reshape(-1, 1)\n",
+    "\n",
+    "        return H\n",
+    "        \n",
+    "            \n",
     "    def future_collaborate(self, remote_Ids, remote_data_Ids, remote_Rs): # horizontal collab for now\n",
     "        \"\"\"\n",
     "        Compute a new collaboration matrix, given all remote matrices.\n",
@@ -232,7 +339,7 @@
     "        # partition matrices after optimal transport.\n",
     "        transported_remote_Rs = []\n",
     "        # vector of confidence coefficients.\n",
-    "        confidence_coefficient = np.zeros(P)\n",
+    "        confidence_coefficients = np.zeros(P)\n",
     "        \n",
     "        #local_component, remote_component = np.zeros_like(self.R), np.zeros_like(self.R)\n",
     "        \n",
@@ -366,139 +473,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test function to find indices"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Id = np.array([3, 5, 1, 7, 9])\n",
-    "count = np.zeros_like(Id)\n",
-    "present = np.array([1, 7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_indices(Id, present):\n",
-    "    res = np.zeros_like(Id)\n",
-    "    for x in present:\n",
-    "        res[np.where(Id==x)]+=1\n",
-    "    return res\n",
-    "\n",
-    "@njit\n",
-    "def fast_find_indices(Id, present):\n",
-    "    res = np.zeros_like(Id)\n",
-    "    for x in present:\n",
-    "        res[np.where(Id==x)]+=1\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.06 µs ± 270 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "find_indices(Id, present)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "772 ns ± 12.1 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "fast_find_indices(Id, present)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class my_list:\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        self.values = []\n",
-    "        for e in args:\n",
-    "            self.values.append(e)\n",
-    "            \n",
-    "    def __eq__(self, other):\n",
-    "        try:\n",
-    "            assert isinstance(other, my_list)\n",
-    "        except:\n",
-    "            print(\"only compare to another instance of my_list\")\n",
-    "            return False\n",
-    "        if len(self.values) != len(other.values):\n",
-    "            print(\"length difference: {} != {}\".format(len(self.values), len(other.values)))\n",
-    "            return False\n",
-    "        for s, o in zip(self.values, other.values):\n",
-    "            if s != o:\n",
-    "                print(\"{} != {}\".format(s, o))\n",
-    "                return False\n",
-    "        return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = my_list(1, 2)\n",
-    "b = my_list(1, 2)\n",
-    "c = my_list(1, 2, 3)\n",
-    "d = [1, 2]\n",
-    "e = my_list(1, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a==b"
-   ]
+   "source": []
   }
  ],
  "metadata": {
